# tempmailorg

./: README.md  build  pyproject.toml  setup.cfg
src/tempmailorg/: __init__.py  tempmail.py
