
[metadata]
version = 0.0.3
name = tempmailorg
author = yell0w4x
description = temp-mail.org unofficial api wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yell0w4x/tempmailorg
project_urls =
    Bug Tracker = https://github.com/yell0w4x/tempmailorg/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = temp mail


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 

[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    tempmailorg = tempmailorg.cli:main
